# flux-dao-0.5

./: Cargo.toml  test.sh
res/: flux_dao.wasm  flux_dao_always_finalize.diff  flux_dao_always_finalize.wasm  flux_protocol.wasm  flux_protocol_old.wasm
scripts/: config.sh  finalize-market-proposal.sh  resolute-market-proposal.sh  vote-no.sh  vote-yes.sh
src/: lib.rs  policy_item.rs  proposal.rs  proposal_status.rs  tests.rs  utils.rs
tests/: context.rs
