[package]
name = "flux-dao"
version = "0.1.0"
authors = ["Flux Protocol"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[dependencies]
near-sdk = { git = "https://github.com/near/near-sdk-rs.git", tag="2.2.0" }
near-sdk-sim = { git = "https://github.com/near/near-sdk-rs.git", tag="2.2.0" }

